remote/argocd/dd-next-runtime/dd-ci-profile-runner.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dd-ci-profile-runner
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: dd-ci-profile-runner
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: dd-build-server
      ports:
        - protocol: TCP
          port: 8147
